# MCP

EcommerceMCPServer/: .gitignore  README.md  client.py  main.py  pyproject.toml  server.py  sse_server.py
EcommerceMCPServer/agents/: agent_wrapper.py
EcommerceMCPServer/clients/: streamablehttp_client.py
EcommerceMCPServer/server_config/: server.json
EcommerceMCPServer/servers/: launcher.py  stdio_server.py  streamablehttp_server.py
EcommerceMCPServer/src/utils/: config_loader.py  formatter.py
